# iced_material

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: styling.rs
src/: button.rs  checkbox.rs  combo_box.rs  container.rs  dialog.rs  lib.rs  markdown.rs  menu.rs  pane_grid.rs  pick_list.rs  progress_bar.rs  qr_code.rs  radio.rs  rule.rs  scrollable.rs  slider.rs  svg.rs  table.rs  text.rs  text_editor.rs  text_input.rs  toggler.rs  utils.rs
