[package]
name = "iced_material"
description = "A Material3 inspired theme for `iced`"
authors = ["pml68 <contact@pml68.dev>"]
version = "0.14.0-dev"
edition = "2024"
license = "MIT"
repository = "https://github.com/pml68/iced_builder"
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
rust-version = "1.85"

[features]
default = ["system-theme"]
# Adds a `System` variant that follows the system theme mode.
system-theme = ["dep:dark-light"]
# Provides `serde` support.
serde = ["dep:serde"]
# Provides support for animating with `iced_anim`.
animate = ["dep:iced_anim"]
# Enables pixel snapping for crisp edges by default (can cause jitter!).
crisp = ["iced_widget/crisp"]
# Provides support for `iced_dialog`.
dialog = ["dep:iced_dialog"]
# Provides support for the markdown widget.
markdown = ["iced_widget/markdown"]
# Provides support for the SVG widget.
svg = ["iced_widget/svg"]
# Provides support for the QR code widget.
qr_code = ["iced_widget/qr_code"]

[dependencies]
iced_widget = "0.14.0-dev"
dark-light = { version = "2.0", optional = true }
serde = { version = "1.0", optional = true }

[dependencies.iced_dialog]
git = "https://github.com/pml68/iced_dialog"
branch = "master"
optional = true

[dependencies.iced_anim]
git = "https://github.com/bradysimon/iced_anim"
branch = "iced/master"
features = ["derive"]
optional = true

[dev-dependencies]
iced = "0.14.0-dev"

[lints.rust]
missing_debug_implementations = "deny"
unsafe_code = "deny"
unused_results = "deny"

[lints.clippy]
type-complexity = "allow"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
default_trait_access = "deny"
match-wildcard-for-single-variants = "deny"
redundant-closure-for-method-calls = "deny"
filter_map_next = "deny"
manual_let_else = "deny"
unused_async = "deny"
from_over_into = "deny"
needless_borrow = "deny"
new_without_default = "deny"
useless_conversion = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"

[patch.crates-io]
iced_widget = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_core = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced = { git = "https://github.com/iced-rs/iced", branch = "master" }
